k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          #image: dave123456789/multi-client-k8s-dev
          #image: dave123456789/multi-client
          image: dave123456789/multi-client-10-14
          #image: stephengrider/multi-client
          #image: test
          ports:
            - containerPort: 3000
