k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          # use multi-server-k8s-dev-use for docker development build (nodemon)
          #image: dave123456789/multi-server-k8s-dev-use
          # use server-skaffold for development injectable framework    
          image: dave123456789/server-skaffold
          
          #image: cygnetops/multi-server-pgfix-5-11
          #image: dave123456789/multi-server-k8s-dev
          #image: dave123456789/multi-server-10-14
          ports:
            - containerPort: 5000
