k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE ANNOTATION
    # added:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    # added.  force all http to https:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  # added:
  tls:
    - hosts:
        #- holinessinloveofchrist.com
        #- www.holinessinloveofchrist.com
        - cloudnetworktesting.com
        - www.cloudnetworktesting.com
      #secretName: holinessinloveofchrist-com
      secretName: cloudneworktesting-com
  rules:
   # added host: and everything needs to indent:
    #- host: holinessinloveofchrist.com
    - host: cloudnetworktesting.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
    # added host and everything else needs to indent:
    #- host: www.holinessinloveofchrist.com
    - host: www.cloudnetworktesting.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
